# tzlibre

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-build  LICENSE  Makefile  README.md  active_protocol_versions
composes/: docker-compose-betanet.yml  docker-compose-devnet.yml
composes/scripts/: accuser.sh  baker.sh  betanet_parameters-test.json  betanet_parameters.json  boot-node.sh  check.sh  endorser.sh  node.sh  status.sh
docs/: index.rst
docs/doc_gen/: dune  node_helpers.ml  p2p_doc.ml  rpc_doc.ml
docs/doc_gen/errors/: dune  error_doc.ml
docs/introduction/: howtouse.rst
docs/protocols/: 003_PsddFKi3.rst
docs/releases/: april.rst
docs/whitedoc/: the_big_picture.rst
scripts/: activate_protocol.sh  alphanet_version  betanet_parameters.json  gen_genesis.ml  protocol_parameters.json  snapshot_alpha.sh  update_hashes.sh  zeronet.patch
scripts/docker/: docker-compose-generic.yml  entrypoint.inc.sh
src/bin_client/: dune  main_client.ml  tezos-client.opam  tezos-init-sandboxed-client.sh
src/bin_client/test/: test_lib.inc.sh  test_multinode.sh
src/bin_flextesa/: command_voting.ml
src/bin_node/: dune  genesis_chain.ml  main.ml  node_config_command.ml  node_config_file.ml  tezos-node.opam
src/bin_signer/: main_signer.ml
src/lib_base/: block_header.ml  distributed_db_version.ml
src/lib_client_base/: tezos-client-base.opam
src/lib_client_base_unix/: client_config.ml
src/lib_client_commands/: client_commands.ml  client_commands.mli  client_keys_commands.mli
src/lib_network_sandbox/: dune  tezos-network-sandbox.opam  tezos_protocol.ml  tezos_protocol.mli
src/lib_shell/bench/: dune
src/lib_shell/bench/helpers/: dune  proto_alpha.ml
src/proto_000_Ps8LKGP9/lib_client/: client_proto_main.ml  client_proto_main.mli  dune  proto_000_Ps8LKGP9.ml  tezos-client-000-Ps8LKGP9.opam
src/proto_000_Ps8LKGP9/lib_protocol/: TEZOS_PROTOCOL  data.ml  dune.inc  tezos-embedded-protocol-000-Ps8LKGP9.opam  tezos-protocol-000-Ps8LKGP9.opam
src/proto_000_Ps9mPmXa/lib_client/: client_proto_main.ml
src/proto_000_Ps9mPmXa/lib_protocol/: data.ml
src/proto_001_Havana/bin_accuser/: dune  tezos-accuser-001-Havana.opam
src/proto_001_Havana/bin_baker/: dune  tezos-baker-001-Havana.opam
src/proto_001_Havana/bin_endorser/: dune  tezos-endorser-001-Havana.opam
src/proto_001_Havana/lib_client/: dune  proto_alpha.ml  tezos-client-001-Havana.opam
src/proto_001_Havana/lib_client/test/: dune
src/proto_001_Havana/lib_client_commands/: dune  tezos-client-001-Havana-commands.opam
src/proto_001_Havana/lib_delegate/: client_baking_blocks.ml  client_baking_nonces.ml  delegate_commands.ml  dune  tezos-accuser-001-Havana-commands.opam  tezos-baker-001-Havana-commands.opam  tezos-baking-001-Havana-commands.opam  tezos-baking-001-Havana.opam  tezos-endorser-001-Havana-commands.opam
src/proto_001_Havana/lib_delegate/test/: dune  proto_alpha_helpers.ml
src/proto_001_Havana/lib_mempool/: dune  filter.ml  tezos-mempool-001-Havana.opam
src/proto_001_Havana/lib_protocol/: TEZOS_PROTOCOL  constants_repr.ml  constants_storage.ml  contract_repr.ml  contract_repr.mli  contract_storage.ml  contract_storage.mli  dune.inc  init_storage.ml  main.ml  raw_context.ml  raw_context.mli  tezos-embedded-protocol-001-Havana.opam  tezos-protocol-001-Havana.opam
src/proto_001_PtCJ7pwo/lib_client_commands/: client_proto_context_commands.ml
src/proto_002_PsYLVpVv/lib_client_commands/: client_proto_context_commands.ml
src/proto_003_PsWqDswK/bin_accuser/: dune  tezos-accuser-003-PsWqDswK.opam
src/proto_003_PsWqDswK/bin_baker/: dune  tezos-baker-003-PsWqDswK.opam
src/proto_003_PsWqDswK/bin_endorser/: dune  tezos-endorser-003-PsWqDswK.opam
src/proto_003_PsWqDswK/lib_client/: dune  proto_alpha.ml  tezos-client-003-PsWqDswK.opam
src/proto_003_PsWqDswK/lib_client_commands/: client_proto_context_commands.ml  dune  tezos-client-003-PsWqDswK-commands.opam
src/proto_003_PsWqDswK/lib_delegate/: delegate_commands.ml  dune  tezos-accuser-003-PsWqDswK-commands.opam  tezos-baker-003-PsWqDswK-commands.opam  tezos-baking-003-PsWqDswK-commands.opam  tezos-baking-003-PsWqDswK.opam  tezos-endorser-003-PsWqDswK-commands.opam
src/proto_003_PsWqDswK/lib_delegate/test/: dune
src/proto_003_PsWqDswK/lib_mempool/: dune  filter.ml  tezos-mempool-003-PsWqDswK.opam
src/proto_003_PsWqDswK/lib_protocol/: TEZOS_PROTOCOL  alpha_context.mli  bootstrap_storage.ml  constants_repr.ml  constants_storage.ml  dune.inc  parameters_repr.ml  tezos-embedded-protocol-003-PsWqDswK.opam  tezos-protocol-003-PsWqDswK.opam
src/proto_004_PstsZhmG/bin_accuser/: dune  tezos-accuser-004-PstsZhmG.opam
src/proto_004_PstsZhmG/bin_baker/: dune  tezos-baker-004-PstsZhmG.opam
src/proto_004_PstsZhmG/bin_endorser/: dune  tezos-endorser-004-PstsZhmG.opam
src/proto_004_PstsZhmG/lib_client/: dune  proto_alpha.ml  tezos-client-004-PstsZhmG.opam
src/proto_004_PstsZhmG/lib_client_commands/: dune  tezos-client-004-PstsZhmG-commands.opam
src/proto_004_PstsZhmG/lib_delegate/: client_baking_nonces.ml  dune  tezos-accuser-004-PstsZhmG-commands.opam  tezos-baker-004-PstsZhmG-commands.opam  tezos-baking-004-PstsZhmG-commands.opam  tezos-baking-004-PstsZhmG.opam  tezos-endorser-004-PstsZhmG-commands.opam
src/proto_004_PstsZhmG/lib_delegate/test/: dune
src/proto_004_PstsZhmG/lib_mempool/: dune  filter.ml  tezos-mempool-004-PstsZhmG.opam
src/proto_004_PstsZhmG/lib_protocol/: TEZOS_PROTOCOL  alpha_context.mli  bootstrap_storage.ml  constants_storage.ml  dune.inc  (+4 more)
src/proto_005_Brest/: .gitignore  README.md
src/proto_005_Brest/bin_accuser/: dune  tezos-accuser-005-Brest.opam
src/proto_005_Brest/lib_client_commands/: dune  tezos-client-005-Brest-commands.opam
src/proto_005_Brest/lib_delegate/: client_baking_nonces.ml  dune  tezos-accuser-005-Brest-commands.opam  tezos-baker-005-Brest-commands.opam  tezos-baking-005-Brest-commands.opam  tezos-baking-005-Brest.opam  tezos-endorser-005-Brest-commands.opam
src/proto_005_Brest/lib_delegate/test/: dune
src/proto_005_Brest/lib_mempool/: dune  filter.ml  tezos-mempool-005-Brest.opam
(+42 files in other folders)
