(library
 (name tezos_client_000_Ps8LKGP9)
 (public_name tezos-client-000-Ps8LKGP9)
 (libraries tezos-base
            tezos-shell-services
            tezos-client-base
            tezos-client-commands
            tezos-protocol-environment
            tezos-protocol-000-Ps8LKGP9
            tezos-stdlib-unix)
 (library_flags (:standard -linkall))
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_shell_services
                   -open Tezos_client_base
                   -open Tezos_client_commands)))

(alias
 (name runtest_indent)
 (deps (glob_files *.ml{,i}))
 (action (run bash %{libexec:tezos-stdlib:test-ocp-indent.sh} %{deps})))
