(executable
 (name main_accuser_001_Havana)
 (public_name tezos-accuser-001-Havana)
 (libraries tezos-client-base-unix
            tezos-client-commands
            tezos-baking-001-Havana-commands)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_client_001_Havana
                   -open Tezos_client_commands
                   -open Tezos_baking_001_Havana_commands
                   -open Tezos_client_base_unix)))

(alias
 (name runtest_indent)
 (deps (glob_files *.ml{,i}))
 (action (run bash %{libexec:tezos-stdlib:test-ocp-indent.sh} %{deps})))
