(library
 (name tezos_baking_001_Havana)
 (public_name tezos-baking-001-Havana)
 (libraries tezos-base
            tezos-protocol-001-Havana
            tezos-protocol-environment
            tezos-shell-services
            tezos-client-base
            tezos-client-001-Havana
            tezos-client-commands
            tezos-stdlib-unix
            tezos-storage
            tezos-rpc-http
            tezos-rpc)
 (library_flags (:standard -linkall))
 (modules (:standard \
                     delegate_commands
                     delegate_commands_registration))
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_shell_services
                   -open Tezos_client_base
                   -open Tezos_client_001_Havana
                   -open Tezos_client_commands
                   -open Tezos_stdlib_unix
                   -open Tezos_storage
                   -open Tezos_rpc
                   -open Tezos_rpc_http)))

(library
 (name tezos_baking_001_Havana_commands)
 (public_name tezos-baking-001-Havana-commands)
 (libraries tezos-base
            tezos-protocol-001-Havana
            tezos-protocol-environment
            tezos-shell-services
            tezos-client-base
            tezos-client-001-Havana
            tezos-client-commands
            tezos-baking-001-Havana)
 (library_flags (:standard -linkall))
 (modules delegate_commands)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_stdlib_unix
                   -open Tezos_shell_services
                   -open Tezos_client_base
                   -open Tezos_client_001_Havana
                   -open Tezos_client_commands
                   -open Tezos_baking_001_Havana
                   -open Tezos_rpc)))

(library
 (name tezos_baking_001_Havana_commands_registration)
 (public_name tezos-baking-001-Havana-commands.registration)
 (libraries tezos-base
            tezos-protocol-001-Havana
            tezos-protocol-environment
            tezos-shell-services
            tezos-client-base
            tezos-client-001-Havana
            tezos-client-commands
            tezos-baking-001-Havana
            tezos-baking-001-Havana-commands
            tezos-rpc)
 (library_flags (:standard -linkall))
 (modules delegate_commands_registration)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_shell_services
                   -open Tezos_client_base
                   -open Tezos_client_001_Havana
                   -open Tezos_client_commands
                   -open Tezos_baking_001_Havana
                   -open Tezos_baking_001_Havana_commands
                   -open Tezos_rpc)))

(alias
 (name runtest_indent)
 (deps (glob_files *.ml{,i}))
 (action (run bash %{libexec:tezos-stdlib:test-ocp-indent.sh} %{deps})))
