opam-version: "2.0"
maintainer: "contact@tezos.com"
authors: [ "Tezos devteam" ]
homepage: "https://www.tezos.com/"
bug-reports: "https://gitlab.com/tezos/tezos/issues"
dev-repo: "git+https://gitlab.com/tezos/tezos.git"
license: "MIT"
depends: [
  "ocamlfind" { build }
  "dune" { build & >= "1.7" }
  "tezos-base"
  "tezos-protocol-environment"
  "tezos-protocol-001-Havana"
  "tezos-shell-services"
  "tezos-client-base"
  "tezos-client-commands"
  "tezos-client-001-Havana"
  "tezos-baking-001-Havana"
  "tezos-signer-backends" { with-test }
]
build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]
synopsis: "Tezos/Protocol: 001_Havana (protocol-specific commands for `tezos-baker`)"
