(executable
 (name main_endorser_003_PsWqDswK)
 (public_name tezos-endorser-003-PsWqDswK)
 (libraries tezos-client-base-unix
            tezos-client-commands
            tezos-baking-003-PsWqDswK-commands)
 (flags (:standard -w -9+27-30-32-40@8
                   -safe-string
                   -open Tezos_base__TzPervasives
                   -open Tezos_client_003_PsWqDswK
                   -open Tezos_client_commands
                   -open Tezos_baking_003_PsWqDswK_commands
                   -open Tezos_client_base_unix)))

(alias
 (name runtest_indent)
 (deps (glob_files *.ml{,i}))
 (action (run bash %{libexec:tezos-stdlib:test-ocp-indent.sh} %{deps})))
