(library
 (name tezos_baking_003_PsWqDswK)
 (public_name tezos-baking-003-PsWqDswK)
 (libraries tezos-base
            tezos-protocol-003-PsWqDswK
            tezos-protocol-environment
            tezos-shell-services
            tezos-client-base
            tezos-client-002-PsYLVpVv
            tezos-client-003-PsWqDswK
            tezos-client-commands
            tezos-storage
            tezos-rpc-http
            tezos-rpc)
 (library_flags (:standard -linkall))
 (modules (:standard \
                     delegate_commands
                     delegate_commands_registration))
 (flags (:standard -w -9+27-30-32-40@8
                   -safe-string
                   -open Tezos_base__TzPervasives
                   -open Tezos_shell_services
                   -open Tezos_client_base
                   -open Tezos_client_003_PsWqDswK
                   -open Tezos_client_commands
                   -open Tezos_storage
                   -open Tezos_rpc
                   -open Tezos_rpc_http)))

(library
 (name tezos_baking_003_PsWqDswK_commands)
 (public_name tezos-baking-003-PsWqDswK-commands)
 (libraries tezos-base
            tezos-protocol-003-PsWqDswK
            tezos-protocol-environment
            tezos-shell-services
            tezos-client-base
            tezos-client-003-PsWqDswK
            tezos-client-commands
            tezos-baking-003-PsWqDswK)
 (library_flags (:standard -linkall))
 (modules delegate_commands)
 (flags (:standard -w -9+27-30-32-40@8
                   -safe-string
                   -open Tezos_base__TzPervasives
                   -open Tezos_stdlib_unix
                   -open Tezos_shell_services
                   -open Tezos_client_base
                   -open Tezos_client_003_PsWqDswK
                   -open Tezos_client_commands
                   -open Tezos_baking_003_PsWqDswK
                   -open Tezos_rpc)))

(library
 (name tezos_baking_003_PsWqDswK_commands_registration)
 (public_name tezos-baking-003-PsWqDswK-commands.registration)
 (libraries tezos-base
            tezos-protocol-003-PsWqDswK
            tezos-protocol-environment
            tezos-shell-services
            tezos-client-base
            tezos-client-003-PsWqDswK
            tezos-client-commands
            tezos-baking-003-PsWqDswK
            tezos-baking-003-PsWqDswK-commands
            tezos-rpc)
 (library_flags (:standard -linkall))
 (modules delegate_commands_registration)
 (flags (:standard -w -9+27-30-32-40@8
                   -safe-string
                   -open Tezos_base__TzPervasives
                   -open Tezos_shell_services
                   -open Tezos_client_base
                   -open Tezos_client_003_PsWqDswK
                   -open Tezos_client_commands
                   -open Tezos_baking_003_PsWqDswK
                   -open Tezos_baking_003_PsWqDswK_commands
                   -open Tezos_rpc)))

(alias
 (name runtest_indent)
 (deps (glob_files *.ml{,i}))
 (action (run bash %{libexec:tezos-stdlib:test-ocp-indent.sh} %{deps})))
