(library
 (name tezos_mempool_003_PsWqDswK)
 (public_name tezos-mempool-003-PsWqDswK)
 (libraries tezos-base
            tezos-embedded-protocol-003-PsWqDswK)
 (flags (:standard -w -9+27-30-32-40@8
                   -safe-string
                   -open Tezos_base__TzPervasives
                   -open Tezos_embedded_raw_protocol_003_PsWqDswK
                   -open Tezos_embedded_protocol_003_PsWqDswK
                   -open Tezos_embedded_protocol_environment_003_PsWqDswK)))

(alias
 (name runtest_indent)
 (deps (glob_files *.ml{,i}))
 (action (run bash %{libexec:tezos-stdlib:test-ocp-indent.sh} %{deps})))
