(executable
 (name main_baker_004_PstsZhmG)
 (public_name tezos-baker-004-PstsZhmG)
 (libraries tezos-client-base-unix
            tezos-client-commands
            tezos-baking-004-PstsZhmG-commands)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_client_004_PstsZhmG
                   -open Tezos_client_commands
                   -open Tezos_baking_004_PstsZhmG_commands
                   -open Tezos_client_base_unix)))

(alias
 (name runtest_indent)
 (deps (glob_files *.ml{,i}))
 (action (run bash %{libexec:tezos-stdlib:test-ocp-indent.sh} %{deps})))
