(library
 (name tezos_client_004_PstsZhmG_commands)
 (public_name tezos-client-004-PstsZhmG-commands)
 (libraries tezos-base
            tezos-stdlib-unix
            tezos-protocol-004-PstsZhmG
            tezos-protocol-environment
            tezos-shell-services
            tezos-client-base-unix
            tezos-client-004-PstsZhmG
            tezos-client-commands
            tezos-rpc)
 (library_flags (:standard -linkall))
 (modules (:standard \ alpha_commands_registration))
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_stdlib_unix
                   -open Tezos_shell_services
                   -open Tezos_client_base
                   -open Tezos_client_base_unix
                   -open Tezos_client_004_PstsZhmG
                   -open Tezos_client_commands
                   -open Tezos_rpc)))

(library
 (name tezos_client_004_PstsZhmG_commands_registration)
 (public_name tezos-client-004-PstsZhmG-commands.registration)
 (libraries tezos-base
            tezos-protocol-004-PstsZhmG
            tezos-protocol-environment
            tezos-shell-services
            tezos-client-base
            tezos-client-004-PstsZhmG
            tezos-client-commands
            tezos-client-004-PstsZhmG-commands
            tezos-rpc)
 (library_flags (:standard -linkall))
 (modules alpha_commands_registration)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_shell_services
                   -open Tezos_client_base
                   -open Tezos_client_004_PstsZhmG
                   -open Tezos_client_commands
                   -open Tezos_client_004_PstsZhmG_commands
                   -open Tezos_rpc)))

(alias
 (name runtest_indent)
 (deps (glob_files *.ml{,i}))
 (action (run bash %{libexec:tezos-stdlib:test-ocp-indent.sh} %{deps})))
