opam-version: "2.0"
maintainer: "contact@tezos.com"
authors: [ "Tezos devteam" ]
homepage: "https://www.tezos.com/"
bug-reports: "https://gitlab.com/tezos/tezos/issues"
dev-repo: "git+https://gitlab.com/tezos/tezos.git"
license: "MIT"
depends: [
  "ocamlfind" { build }
  "dune" { build & >= "1.0.1" }
  "tezos-base"
  "tezos-protocol-environment"
  "tezos-protocol-004-PstsZhmG"
  "tezos-shell-services"
  "tezos-client-base"
  "tezos-client-004-PstsZhmG"
  "tezos-client-commands"
]
build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]
synopsis: "Tezos/Protocol: 004_PstsZhmG (protocol-specific commands for `tezos-client`)"