(library
 (name tezos_baking_004_PstsZhmG)
 (public_name tezos-baking-004-PstsZhmG)
 (libraries tezos-base
            tezos-protocol-004-PstsZhmG
            tezos-protocol-environment
            tezos-shell-services
            tezos-client-base
            tezos-client-003-PsWqDswK
            tezos-client-004-PstsZhmG
            tezos-client-commands
            tezos-storage
            tezos-rpc-http
            tezos-rpc)
 (library_flags (:standard -linkall))
 (modules (:standard \
                     delegate_commands
                     delegate_commands_registration))
 (flags (:standard -w -9+27-30-32-40@8
                   -safe-string
                   -open Tezos_base__TzPervasives
                   -open Tezos_shell_services
                   -open Tezos_client_base
                   -open Tezos_client_004_PstsZhmG
                   -open Tezos_client_commands
                   -open Tezos_storage
                   -open Tezos_rpc
                   -open Tezos_rpc_http)))

(library
 (name tezos_baking_004_PstsZhmG_commands)
 (public_name tezos-baking-004-PstsZhmG-commands)
 (libraries tezos-base
            tezos-protocol-004-PstsZhmG
            tezos-protocol-environment
            tezos-shell-services
            tezos-client-base
            tezos-client-004-PstsZhmG
            tezos-client-commands
            tezos-baking-004-PstsZhmG)
 (library_flags (:standard -linkall))
 (modules delegate_commands)
 (flags (:standard -w -9+27-30-32-40@8
                   -safe-string
                   -open Tezos_base__TzPervasives
                   -open Tezos_stdlib_unix
                   -open Tezos_shell_services
                   -open Tezos_client_base
                   -open Tezos_client_004_PstsZhmG
                   -open Tezos_client_commands
                   -open Tezos_baking_004_PstsZhmG
                   -open Tezos_rpc)))

(library
 (name tezos_baking_004_PstsZhmG_commands_registration)
 (public_name tezos-baking-004-PstsZhmG-commands.registration)
 (libraries tezos-base
            tezos-protocol-004-PstsZhmG
            tezos-protocol-environment
            tezos-shell-services
            tezos-client-base
            tezos-client-004-PstsZhmG
            tezos-client-commands
            tezos-baking-004-PstsZhmG
            tezos-baking-004-PstsZhmG-commands
            tezos-rpc)
 (library_flags (:standard -linkall))
 (modules delegate_commands_registration)
 (flags (:standard -w -9+27-30-32-40@8
                   -safe-string
                   -open Tezos_base__TzPervasives
                   -open Tezos_shell_services
                   -open Tezos_client_base
                   -open Tezos_client_004_PstsZhmG
                   -open Tezos_client_commands
                   -open Tezos_baking_004_PstsZhmG
                   -open Tezos_baking_004_PstsZhmG_commands
                   -open Tezos_rpc)))

(alias
 (name runtest_indent)
 (deps (glob_files *.ml{,i}))
 (action (run bash %{libexec:tezos-stdlib:test-ocp-indent.sh} %{deps})))
