(library
 (name tezos_mempool_004_PstsZhmG)
 (public_name tezos-mempool-004-PstsZhmG)
 (libraries tezos-base
            tezos-embedded-protocol-004-PstsZhmG)
 (flags (:standard -w -9+27-30-32-40@8
                   -safe-string
                   -open Tezos_base__TzPervasives
                   -open Tezos_embedded_raw_protocol_004_PstsZhmG
                   -open Tezos_embedded_protocol_004_PstsZhmG
                   -open Tezos_embedded_protocol_environment_004_PstsZhmG)))

(alias
 (name runtest_indent)
 (deps (glob_files *.ml{,i}))
 (action (run bash %{libexec:tezos-stdlib:test-ocp-indent.sh} %{deps})))
