(executable
 (name main_accuser_005_Brest)
 (public_name tezos-accuser-005-Brest)
 (libraries tezos-client-base-unix
            tezos-client-commands
            tezos-baking-005-Brest-commands)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_client_005_Brest
                   -open Tezos_client_commands
                   -open Tezos_baking_005_Brest_commands
                   -open Tezos_client_base_unix)))

(alias
 (name runtest_indent)
 (deps (glob_files *.ml{,i}))
 (action (run bash %{libexec:tezos-stdlib:test-ocp-indent.sh} %{deps})))
