(library
 (name tezos_001_Havana_bench_helpers)
 (libraries tezos-base
            tezos-stdlib-unix
            tezos-shell-services
            tezos-protocol-environment
            tezos-protocol-001-Havana
            alcotest-lwt)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_stdlib_unix
                   -open Tezos_shell_services)))

(alias
 (name runtest_indent)
 (deps (glob_files *.ml*))
 (action (run bash %{libexec:tezos-stdlib:test-ocp-indent.sh} %{deps})))
